# uvdemo-workbench

./: .gitattributes  README.md  justfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: notebook.ipynb
scripts/: script.py
